--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@sanity-typed/groq-js": "^2.0.1",
+    "@types/nodemailer": "^6.4.17",
     "lucide-react": "^0.469.0",
     "next": "15.1.1",
     "next-sanity": "^9.8.28",
+    "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-slideshow-image": "^4.3.2",
     "sanity": "^3.68.1",
