--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-oauth/google": "^0.12.1",
     "@sanity-typed/groq-js": "^2.0.1",
     "@types/nodemailer": "^6.4.17",
+    "googleapis": "^144.0.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.1",
     "next-sanity": "^9.8.28",
