--- a/kube/newman_www-ingress.yaml
+++ b/kube/newman_www-ingress.yaml
@@ -21,3 +21,30 @@ spec:
                 name: newman-www-service
                 port:
                   number: 3000
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: newman-www-www-ingress
+  annotations:
+    cert-manager.io/issuer: letsencrypt-prod
+    # Redirect to the canonical domain
+    nginx.ingress.kubernetes.io/permanent-redirect: https://cmunewman.com
+spec:
+  ingressClassName: nginx
+  tls:
+    - hosts:
+        - www.cmunewman.com
+      secretName: newman-www-www-tls
+  rules:
+    - host: www.cmunewman.com
+      http:
+        paths:
+          # Not used, but necessary for defintion
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: newman-www-service
+                port:
+                  number: 3000
